--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,28 @@
+
+
+
+@media(max-width: 850px){
+    p {
+        font-size: 15px;
+        line-height: 22px;
+    }
+    
+    .btn {
+        font-size: 18px;
+        font-weight: 500;
+        padding: 15px 20px;
+    }
+}
+@media(max-width: 850px){
+    .btn {
+        font-size: 16px;
+        padding: 13px 17px;
+    }
+}
+
+
+
+
 /* header section start */
 @media(max-width: 830px) {
     .logo {
@@ -41,9 +66,10 @@
         flex-direction: column;
         align-items: center;
         padding-top: 50px;
-        background: #ff8f0ecf;
+        background: #ff8f0ee6;
         opacity: 0;
         transition: 0.3s ease-in-out;
+        z-index: -1;
     }
     nav>ul>li>a{
         color: #222;
@@ -63,3 +89,48 @@
     }
 }
 /* header section end */
+
+
+
+/* heros section start */
+@media(max-width: 1100px){
+    .hero-text>h1 {
+        font-size: 54px;
+        line-height: 65px;
+    }
+}
+@media(max-width: 950px){
+    .hero-text>h1 {
+        font-size: 44px;
+        line-height: 55px;
+    }
+}
+@media(max-width: 680px){
+    .hero-text>h1 {
+        font-size: 34px;
+        line-height: 45px;
+    }
+    .hero-text {
+        padding: 0 70px;
+        gap: 15px;
+    }
+}
+@media(max-width: 520px){
+    .hero-text>h1 {
+        font-size: 27px;
+        line-height: 35px;
+    }
+    .hero-text {
+        gap: 10px;
+    }
+}
+@media(max-width: 460px){
+    .hero-text>h1 {
+        font-size: 25px;
+        line-height: 30px;
+    }
+    .hero-text {
+        padding: 0 40px;
+    }
+}
+/* heros section end */
