--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,16 @@
     font-family: 'Work Sans';
 }
 
+body {
+    overflow-x: hidden;
+}
+
 ul>li {
     list-style: none;
+}
+
+section {
+    padding: 70px 0;
 }
 
 .container {
@@ -27,6 +35,32 @@ p {
     color: #727272;
 }
 
+.btn {
+    font-weight: 600;
+    font-size: 20px;
+    color: #FFFFFF;
+    background: #FF900E;
+    padding: 15px 20px;
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+.btn::after{
+    content: "";
+    position: absolute;
+    width: 25px;
+    height: 400px;
+    background: #ffffffcf;
+    top: -30px;
+    left: -100%;
+    filter: blur(15px);
+    transform: rotate(30deg);
+    transition: 0.4s ease-in-out;
+}
+.btn:hover::after{
+    left: 100%;
+}
+
 
 /* header section start */
 header {
@@ -36,6 +70,7 @@ header {
     top: 0;
     left: 0;
     background-color: #FFF4E7;
+    z-index: 999;
 }
 
 .header-wrapper {
@@ -61,14 +96,62 @@ nav>ul {
     display: flex;
     gap: 30px;
 }
-nav>ul>li>a{
+
+nav>ul>li>a {
     font-weight: 500;
     font-size: 18px;
     line-height: 26px;
     color: #424242;
     transition: color 0.3s ease-in-out;
 }
-nav>ul>li>a:hover{
+
+nav>ul>li>a:hover {
     color: #FF900E;
 }
+
 /* header section end */
+
+
+
+
+
+/* hero section start */
+#hero {
+    width: 100%;
+    background: #FFF4E7;
+    padding-top: 120px;
+}
+
+.hero-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+}
+
+.hero-text {
+    max-width: 960px;
+    padding: 0 50px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
+}
+
+.hero-text>h1 {
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 75px;
+    color: #131313;
+}
+.hero-banner{
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+.hero-banner>img{
+    width: 100%;
+}
+/* hero section end */
