--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,19 +1,17 @@
-
-
-
-@media(max-width: 850px){
+@media(max-width: 850px) {
     p {
         font-size: 15px;
         line-height: 22px;
     }
-    
+
     .btn {
         font-size: 18px;
         font-weight: 500;
         padding: 15px 20px;
     }
 }
-@media(max-width: 850px){
+
+@media(max-width: 850px) {
     .btn {
         font-size: 16px;
         padding: 13px 17px;
@@ -38,6 +36,7 @@
         font-size: 17px;
     }
 }
+
 @media(max-width: 680px) {
     .logo {
         font-size: 30px;
@@ -52,12 +51,14 @@
         font-size: 16px;
     }
 }
+
 @media(max-width: 600px) {
     .logo {
         font-size: 27px;
         line-height: 32px;
     }
-    nav>ul{
+
+    nav>ul {
         position: fixed;
         width: 100%;
         height: calc(100% - 72px);
@@ -71,66 +72,129 @@
         transition: 0.3s ease-in-out;
         z-index: -1;
     }
-    nav>ul>li>a{
+
+    nav>ul>li>a {
         color: #222;
     }
-    nav>ul>li>a:hover{
+
+    nav>ul>li>a:hover {
         color: #fff;
     }
-    #navBtn + label{
+
+    #navBtn+label {
         display: block;
         cursor: pointer;
         font-size: 20px;
         color: #FFA43B;
     }
-    #navBtn:checked ~ ul{
+
+    #navBtn:checked~ul {
         left: 0;
         opacity: 1;
     }
 }
+
 /* header section end */
 
 
 
 /* heros section start */
-@media(max-width: 1100px){
+@media(max-width: 1100px) {
     .hero-text>h1 {
         font-size: 54px;
         line-height: 65px;
     }
 }
-@media(max-width: 950px){
+
+@media(max-width: 950px) {
     .hero-text>h1 {
         font-size: 44px;
         line-height: 55px;
     }
 }
-@media(max-width: 680px){
+
+@media(max-width: 680px) {
     .hero-text>h1 {
         font-size: 34px;
         line-height: 45px;
     }
+
     .hero-text {
         padding: 0 70px;
         gap: 15px;
     }
 }
-@media(max-width: 520px){
+
+@media(max-width: 520px) {
     .hero-text>h1 {
         font-size: 27px;
         line-height: 35px;
     }
+
     .hero-text {
         gap: 10px;
     }
 }
-@media(max-width: 460px){
+
+@media(max-width: 460px) {
     .hero-text>h1 {
         font-size: 25px;
         line-height: 30px;
     }
+
     .hero-text {
         padding: 0 40px;
     }
 }
+
 /* heros section end */
+
+
+
+
+
+
+/* team section start */
+@media(max-width: 960px) {
+    .team-text>h2 {
+        font-size: 35px;
+        line-height: 43px;
+        max-width: 400px;
+    }
+}
+
+@media(max-width: 740px) {
+    .team-text {
+        gap: 15px;
+    }
+
+    .team-text>h2 {
+        font-size: 30px;
+        line-height: 35px;
+        max-width: 400px;
+    }
+
+    .team-img {
+        gap: 10px;
+    }
+
+    .team-img-box {
+        flex-basis: calc(50% - 10px);
+    }
+}
+
+@media(max-width: 640px) {
+    .team-text {
+        flex-basis: 100%;
+    }
+    .team-text {
+        text-align: center;
+        justify-content: center;
+    }
+    .team-img {
+        max-width: 550px;
+        flex-grow: 1;
+    }
+}
+
+/* team section end */
