--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,24 +1,3 @@
-@media(max-width: 850px) {
-    p {
-        font-size: 15px;
-        line-height: 22px;
-    }
-
-    .btn {
-        font-size: 18px;
-        font-weight: 500;
-        padding: 15px 20px;
-    }
-}
-
-@media(max-width: 850px) {
-    .btn {
-        font-size: 16px;
-        padding: 13px 17px;
-    }
-}
-
-
 
 
 /* header section start */
@@ -198,3 +177,143 @@
 }
 
 /* team section end */
+
+
+
+
+
+
+/* features section start */
+@media(max-width: 1170px){
+    .features-text {
+        gap: 40px;
+    }
+    .f-t-top>h3 {
+        font-size: 38px;
+        margin-bottom: 15px;
+        max-width: 400px;
+    }
+    .f-t-bttm {
+        padding-left: 20px;
+        gap: 20px;
+    }
+    .features-tag>h3{
+        font-size: 40px;
+    }
+}
+@media(max-width: 1050px){
+    .features-text {
+        gap: 30px;
+    }
+    .f-t-top>h3 {
+        font-size: 32px;
+        margin-bottom: 10px;
+        max-width: 300px;
+    }
+    .f-t-bttm {
+        padding-left: 15px;
+        gap: 15px;
+    }
+    .features-tag{
+        padding: 30px;
+    }
+    .features-tag>h3{
+        font-size: 30px;
+    }
+}
+@media(max-width: 1050px){
+    .features-text {
+        gap: 30px;
+    }
+    .f-t-top>h3 {
+        font-size: 32px;
+        margin-bottom: 10px;
+        max-width: 300px;
+    }
+    .f-t-bttm {
+        padding-left: 15px;
+        gap: 15px;
+    }
+    .features-tag{
+        padding: 30px;
+    }
+    .features-tag>h3{
+        font-size: 30px;
+    }
+}
+@media(max-width: 850px){
+    .features-text {
+        gap: 20px;
+    }
+    .f-t-top>h3 {
+        font-size: 26px;
+        margin-bottom: 5px;
+        max-width: 250px;
+    }
+    .f-t-bttm {
+        gap: 10px;
+    }
+    .features-tag{
+        padding: 20px;
+    }
+    .features-tag>h3{
+        font-size: 25px;
+        font-weight: 600;
+    }
+}
+@media(max-width: 770px){
+    .features-wrapper{
+        gap: 40px;
+    }
+    .features-text,
+    .features-img{
+        flex-basis: 100%;
+        max-width: 500px;
+    }
+    .features-text {
+        gap: 20px;
+    }
+    .f-t-top>h3 {
+        font-size: 26px;
+        margin-bottom: 5px;
+        max-width: 250px;
+    }
+    .f-t-bttm {
+        gap: 10px;
+    }
+    .features-tag{
+        padding: 20px;
+        left: 50%;
+        transform: translateX(-50%) translateY(40%);
+    }
+    .features-tag>h3{
+        font-size: 25px;
+        font-weight: 600;
+    }
+}
+/* features section end */
+
+
+
+
+
+
+@media(max-width: 850px) {
+    p {
+        font-size: 15px !important;
+        line-height: 22px;
+    }
+
+    .btn {
+        font-size: 18px;
+        font-weight: 500;
+        padding: 15px 20px;
+    }
+}
+
+@media(max-width: 850px) {
+    .btn {
+        font-size: 16px;
+        padding: 13px 17px;
+    }
+}
