contact section completed

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,3 @@
-
-
 /* header section start */
 @media(max-width: 830px) {
     .logo {
@@ -166,10 +164,12 @@
     .team-text {
         flex-basis: 100%;
     }
+
     .team-text {
         text-align: center;
         justify-content: center;
     }
+
     .team-img {
         max-width: 550px;
         flex-grow: 1;
@@ -184,115 +184,221 @@
 
 
 /* features section start */
-@media(max-width: 1170px){
+@media(max-width: 1170px) {
     .features-text {
         gap: 40px;
     }
+
     .f-t-top>h3 {
         font-size: 38px;
         margin-bottom: 15px;
         max-width: 400px;
     }
+
     .f-t-bttm {
-        padding-left: 20px;
         gap: 20px;
     }
-    .features-tag>h3{
+
+    .features-tag>h3 {
         font-size: 40px;
     }
 }
-@media(max-width: 1050px){
+
+@media(max-width: 1050px) {
     .features-text {
         gap: 30px;
     }
+
     .f-t-top>h3 {
         font-size: 32px;
         margin-bottom: 10px;
         max-width: 300px;
     }
+
     .f-t-bttm {
-        padding-left: 15px;
         gap: 15px;
     }
-    .features-tag{
+
+    .features-tag {
         padding: 30px;
     }
-    .features-tag>h3{
+
+    .features-tag>h3 {
         font-size: 30px;
     }
 }
-@media(max-width: 1050px){
+
+@media(max-width: 1050px) {
     .features-text {
         gap: 30px;
     }
+
     .f-t-top>h3 {
         font-size: 32px;
         margin-bottom: 10px;
         max-width: 300px;
     }
+
     .f-t-bttm {
-        padding-left: 15px;
         gap: 15px;
     }
-    .features-tag{
+
+    .features-tag {
         padding: 30px;
     }
-    .features-tag>h3{
+
+    .features-tag>h3 {
         font-size: 30px;
     }
 }
-@media(max-width: 850px){
+
+@media(max-width: 850px) {
     .features-text {
         gap: 20px;
     }
+
     .f-t-top>h3 {
         font-size: 26px;
         margin-bottom: 5px;
         max-width: 250px;
     }
+
     .f-t-bttm {
         gap: 10px;
     }
-    .features-tag{
+
+    .features-tag {
         padding: 20px;
     }
-    .features-tag>h3{
+
+    .features-tag>h3 {
         font-size: 25px;
         font-weight: 600;
     }
 }
-@media(max-width: 770px){
-    .features-wrapper{
+
+@media(max-width: 770px) {
+    .features-wrapper {
         gap: 40px;
     }
+
     .features-text,
-    .features-img{
+    .features-img {
         flex-basis: 100%;
         max-width: 500px;
     }
+
     .features-text {
         gap: 20px;
     }
+
     .f-t-top>h3 {
         font-size: 26px;
         margin-bottom: 5px;
         max-width: 250px;
     }
+
     .f-t-bttm {
         gap: 10px;
     }
-    .features-tag{
+
+    .features-tag {
         padding: 20px;
         left: 50%;
         transform: translateX(-50%) translateY(40%);
     }
-    .features-tag>h3{
+
+    .features-tag>h3 {
         font-size: 25px;
         font-weight: 600;
     }
 }
+
 /* features section end */
 
+
+
+
+
+
+/* counter section start */
+@media(max-width: 1050px) {
+    .count-header>h4 {
+        font-size: 40px;
+    }
+
+    .count-box>span {
+        font-size: 35px;
+    }
+}
+
+@media(max-width: 900px) {
+    .count-header>h4 {
+        font-size: 35px;
+    }
+
+    .count-box>img {
+        width: 35px;
+    }
+
+    .count-box>span {
+        font-size: 30px;
+    }
+}
+
+@media(max-width: 770px) {
+    .count-header>h4 {
+        font-size: 27px;
+    }
+
+    .count-box {
+        gap: 5px;
+    }
+
+    .count-box>img {
+        width: 30px;
+    }
+
+    .count-box>span {
+        font-size: 25px;
+    }
+}
+
+/* counter section end */
+
+
+
+
+/* contact section start */
+@media(max-width: 520px) {
+    .contact-form>h5 {
+        font-size: 30px;
+    }
+    .contact-field>input,
+    .contact-field>textarea {
+        font-size: 18px;
+        padding: 8px;
+    }
+    .contact-field>label {
+        position: absolute;
+        top: 20px;
+    }
+    .contact-field>textarea{
+        height: 140px;
+    }
+}
+@media(max-width: 420px) {
+    .contact-form>h5 {
+        font-size: 25px;
+    }
+}
+@media(max-width: 370px) {
+    .contact-field>textarea{
+        height: 100px;
+    }
+}
+
+/* contact section end */
 
 
 
